--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/PaoloVisone/express-blog-intro/issues"
   },
-  "homepage": "https://github.com/PaoloVisone/express-blog-intro#readme"
+  "homepage": "https://github.com/PaoloVisone/express-blog-intro#readme",
+  "dependencies": {
+    "express": "^4.21.2"
+  }
 }
